Manifests/Mirror/Mirror-Web/ubuntu/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mirror-ubuntu
  namespace: default
  labels:
    app: mirror-ubuntu
    id: mirror-web
  annotations:
    operator.1password.io/auto-restart: "true"
spec:
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: mirror-ubuntu
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: mirror-ubuntu
        id: mirror-web
    spec:
      containers:
        - name: mirror-ubuntu
          image: 0xemma/nginx-autoindex:json-4
          resources:
            limits:
              memory: 8000Mi
            requests:
              cpu: 100m
              memory: 8000Mi
          volumeMounts:
            - mountPath: /var/lib/nginx/html
              name: mirror-pvc
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
      volumes:
        - name: mirror-pvc
          persistentVolumeClaim:
            claimName: mirror-truenas
