Manifests/Mirror/Mirror-Web/ubuntu/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mirror-ingress-tls-ubuntu
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`mirror.0xem.ma`) && PathPrefix(`/ubuntu`)
      kind: Rule
      services:
        - name: mirror-ubuntu
          kind: Service
          port: 80
  tls:
    secretName: emma-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mirror-ingress-ubuntu
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`mirror.0xem.ma`) && PathPrefix(`/ubuntu`)
      kind: Rule
      services:
        - name: mirror-ubuntu
          kind: Service
          port: 80
